--- a/index.html
+++ b/index.html
@@ -2,28 +2,30 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Solar – Greece Stable</title>
+<title>Solar Greece Stable</title>
 
 <link href="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.css" rel="stylesheet"/>
 
 <style>
-body { margin:0; }
+body { margin:0; overflow:hidden; }
 #map { width:100vw; height:100vh; }
+
 .panel {
   position:absolute;
   bottom:20px;
   left:20px;
   background:rgba(15,15,15,0.95);
   color:white;
-  padding:12px;
+  padding:14px;
   border-radius:6px;
   font-size:13px;
 }
+
 .gradient {
-  height:14px;
   width:220px;
+  height:14px;
+  margin-top:8px;
   background: linear-gradient(to right, #1e90ff, #ffff00, #ff4500);
-  margin-top:6px;
 }
 </style>
 </head>
@@ -59,42 +61,47 @@ map.addControl(new maplibregl.NavigationControl());
 
 map.on('load', () => {
 
-  // ------------------------------------------------------------------
-  // 1️⃣ Force real 3D extrusion on existing building layer
-  // ------------------------------------------------------------------
+  // ---------------------------------------------------------
+  // 1️⃣ Add 3D Buildings (Independent of default layers)
+  // ---------------------------------------------------------
 
-  map.setLayoutProperty('building', 'visibility', 'visible');
-
-  map.setPaintProperty('building', 'fill-extrusion-color', '#ffffff');
-
-  map.setPaintProperty('building', 'fill-extrusion-height', [
-    'case',
-    ['has', 'height'], ['get', 'height'],
-    ['has', 'levels'], ['*', ['get', 'levels'], 5],
-    30
-  ]);
-
-  map.setPaintProperty('building', 'fill-extrusion-opacity', 0.95);
+  map.addLayer({
+    id: '3d-buildings',
+    type: 'fill-extrusion',
+    source: 'openmaptiles',
+    'source-layer': 'building',
+    minzoom: 13,
+    paint: {
+      'fill-extrusion-color': '#ffffff',
+      'fill-extrusion-height': [
+        'case',
+        ['has', 'height'], ['get', 'height'],
+        ['has', 'levels'], ['*', ['get', 'levels'], 5],
+        35
+      ],
+      'fill-extrusion-opacity': 0.95
+    }
+  });
 
   map.setLight({
     anchor: 'viewport',
     position: [2, 90, 60],
-    intensity: 1.2
+    intensity: 1.3
   });
 
-  // ------------------------------------------------------------------
-  // 2️⃣ Solar Heatmap (deck.gl stable overlay)
-  // ------------------------------------------------------------------
+  // ---------------------------------------------------------
+  // 2️⃣ Solar Heatmap Layer
+  // ---------------------------------------------------------
 
   const points = [];
 
-  const step = 0.2;
+  const step = 0.15;
 
   for (let lon = 19; lon <= 28; lon += step) {
     for (let lat = 34; lat <= 42; lat += step) {
 
       const base = 1600;
-      const southBoost = (42 - lat) * 80;
+      const southBoost = (42 - lat) * 90;
       const value = base + southBoost;
 
       points.push({
@@ -104,18 +111,18 @@ map.on('load', () => {
     }
   }
 
-  const heatmap = new deck.HeatmapLayer({
+  const heatmapLayer = new deck.HeatmapLayer({
     id: 'solar-heat',
     data: points,
     getPosition: d => d.position,
     getWeight: d => d.weight,
-    radiusPixels: 50,
-    intensity: 1.2,
-    threshold: 0.03
+    radiusPixels: 70,
+    intensity: 1.5,
+    threshold: 0.02
   });
 
   const overlay = new deck.MapboxOverlay({
-    layers: [heatmap]
+    layers: [heatmapLayer]
   });
 
   map.addControl(overlay);
