--- a/index.html
+++ b/index.html
@@ -2,31 +2,14 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Solar Stable</title>
+<title>Solar – Clean Working Version</title>
 
 <link href="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.css" rel="stylesheet"/>
 
 <style>
-body { margin:0; }
-#map { width:100vw; height:100vh; }
-
-.panel {
-  position:absolute;
-  bottom:20px;
-  left:20px;
-  background:rgba(15,15,15,0.95);
-  color:white;
-  padding:12px;
-  border-radius:6px;
-  font-size:13px;
-}
-
-.gradient {
-  width:220px;
-  height:14px;
-  margin-top:8px;
-  background: linear-gradient(to right, #1e90ff, #ffff00, #ff4500);
-}
+body { margin:0; overflow:hidden; }
+#map { position:absolute; width:100vw; height:100vh; }
+#deck-canvas { position:absolute; pointer-events:none; }
 </style>
 </head>
 
@@ -34,18 +17,16 @@ body { margin:0; }
 
 <div id="map"></div>
 
-<div class="panel">
-  Solar Irradiation (Demo)
-  <div class="gradient"></div>
-  Low → High
-</div>
-
 <script src="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.js"></script>
 <script src="https://unpkg.com/deck.gl@8.9.34/dist/umd/deck.gl.js"></script>
 
 <script>
 
 const MAPTILER_KEY = "fmHz7ZycUzBddOZvkGZO";
+
+// ------------------------------------------------------------
+// MAP
+// ------------------------------------------------------------
 
 const map = new maplibregl.Map({
   container: 'map',
@@ -59,9 +40,11 @@ const map = new maplibregl.Map({
 
 map.addControl(new maplibregl.NavigationControl());
 
-map.on('load', () => {
+// ------------------------------------------------------------
+// BUILDINGS
+// ------------------------------------------------------------
 
-  // 3D buildings
+map.on('load', () => {
 
   map.addLayer({
     id: '3d-buildings',
@@ -87,10 +70,19 @@ map.on('load', () => {
     intensity: 1.3
   });
 
-  // SOLAR GRID (THIS WORKS)
+  initSolar();
 
-  const features = [];
-  const step = 0.3;
+});
+
+// ------------------------------------------------------------
+// SOLAR – STANDALONE DECK
+// ------------------------------------------------------------
+
+function initSolar() {
+
+  const points = [];
+
+  const step = 0.15;
 
   for (let lon = 19; lon <= 28; lon += step) {
     for (let lat = 34; lat <= 42; lat += step) {
@@ -99,55 +91,67 @@ map.on('load', () => {
       const southBoost = (42 - lat) * 80;
       const value = base + southBoost;
 
-      const poly = [
-        [lon, lat],
-        [lon + step, lat],
-        [lon + step, lat + step],
-        [lon, lat + step],
-        [lon, lat]
-      ];
-
-      features.push({
-        type: "Feature",
-        properties: { solar: value },
-        geometry: {
-          type: "Polygon",
-          coordinates: [poly]
-        }
+      points.push({
+        position: [lon, lat],
+        value: value
       });
     }
   }
 
-  const solarLayer = new deck.GeoJsonLayer({
-    id: 'solar',
-    data: {
-      type: "FeatureCollection",
-      features: features
+  const deckgl = new deck.Deck({
+    canvas: 'deck-canvas',
+    width: '100%',
+    height: '100%',
+    controller: false,
+    initialViewState: {
+      longitude: 22.5,
+      latitude: 39.0,
+      zoom: 6.3,
+      pitch: 60,
+      bearing: -20
     },
-    filled: true,
-    stroked: false,
-    opacity: 0.6,
-    getFillColor: d => {
+    layers: [
+      new deck.ScatterplotLayer({
+        id: 'solar-layer',
+        data: points,
+        getPosition: d => d.position,
+        getRadius: 20000,
+        radiusUnits: 'meters',
+        opacity: 0.5,
+        getFillColor: d => {
 
-      const min = 1600;
-      const max = 2200;
-      const t = (d.properties.solar - min) / (max - min);
+          const min = 1600;
+          const max = 2200;
+          const t = (d.value - min) / (max - min);
 
-      const r = Math.floor(30 + t * 225);
-      const g = Math.floor(144 + t * 100);
-      const b = Math.floor(255 - t * 200);
+          const r = Math.floor(30 + t * 225);
+          const g = Math.floor(144 + t * 100);
+          const b = Math.floor(255 - t * 200);
 
-      return [r, g, b, 200];
-    }
+          return [r, g, b, 200];
+        }
+      })
+    ]
   });
 
-  const overlay = new deck.MapboxOverlay({
-    layers: [solarLayer]
+  // sync deck view with map
+  map.on('move', () => {
+
+    const center = map.getCenter();
+
+    deckgl.setProps({
+      viewState: {
+        longitude: center.lng,
+        latitude: center.lat,
+        zoom: map.getZoom(),
+        pitch: map.getPitch(),
+        bearing: map.getBearing()
+      }
+    });
+
   });
 
-  map.addControl(overlay);
-
-});
+}
 
 </script>
 
