--- a/index.html
+++ b/index.html
@@ -2,31 +2,32 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Solar – Clean Working Version</title>
+<title>Solar Greece Stable</title>
 
 <link href="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.css" rel="stylesheet"/>
 
 <style>
 body { margin:0; overflow:hidden; }
 #map { position:absolute; width:100vw; height:100vh; }
-#deck-canvas { position:absolute; pointer-events:none; }
+#deck-canvas { position:absolute; width:100vw; height:100vh; pointer-events:none; }
 </style>
 </head>
 
 <body>
 
 <div id="map"></div>
+<canvas id="deck-canvas"></canvas>
 
 <script src="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.js"></script>
-<script src="https://unpkg.com/deck.gl@8.9.34/dist/umd/deck.gl.js"></script>
+<script src="https://unpkg.com/deck.gl@8.9.34/dist.min.js"></script>
 
 <script>
 
 const MAPTILER_KEY = "fmHz7ZycUzBddOZvkGZO";
 
-// ------------------------------------------------------------
+// --------------------------------------------------
 // MAP
-// ------------------------------------------------------------
+// --------------------------------------------------
 
 const map = new maplibregl.Map({
   container: 'map',
@@ -40,11 +41,11 @@ const map = new maplibregl.Map({
 
 map.addControl(new maplibregl.NavigationControl());
 
-// ------------------------------------------------------------
-// BUILDINGS
-// ------------------------------------------------------------
-
 map.on('load', () => {
+
+  // -----------------------------
+  // 3D BUILDINGS
+  // -----------------------------
 
   map.addLayer({
     id: '3d-buildings',
@@ -67,21 +68,20 @@ map.on('load', () => {
   map.setLight({
     anchor: 'viewport',
     position: [2, 90, 60],
-    intensity: 1.3
+    intensity: 1
   });
 
   initSolar();
 
 });
 
-// ------------------------------------------------------------
-// SOLAR – STANDALONE DECK
-// ------------------------------------------------------------
+// --------------------------------------------------
+// SOLAR (Deck standalone, no MapboxOverlay)
+// --------------------------------------------------
 
 function initSolar() {
 
   const points = [];
-
   const step = 0.15;
 
   for (let lon = 19; lon <= 28; lon += step) {
@@ -134,7 +134,7 @@ function initSolar() {
     ]
   });
 
-  // sync deck view with map
+  // Sync deck with map movement
   map.on('move', () => {
 
     const center = map.getCenter();
