--- a/index.html
+++ b/index.html
@@ -2,32 +2,25 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Solar Greece Stable</title>
+<title>Solar Greece Clean</title>
 
 <link href="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.css" rel="stylesheet"/>
 
 <style>
 body { margin:0; overflow:hidden; }
-#map { position:absolute; width:100vw; height:100vh; }
-#deck-canvas { position:absolute; width:100vw; height:100vh; pointer-events:none; }
+#map { width:100vw; height:100vh; }
 </style>
 </head>
 
 <body>
 
 <div id="map"></div>
-<canvas id="deck-canvas"></canvas>
 
 <script src="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.js"></script>
-<script src="https://unpkg.com/deck.gl@8.9.34/dist.min.js"></script>
 
 <script>
 
 const MAPTILER_KEY = "fmHz7ZycUzBddOZvkGZO";
-
-// --------------------------------------------------
-// MAP
-// --------------------------------------------------
 
 const map = new maplibregl.Map({
   container: 'map',
@@ -43,9 +36,9 @@ map.addControl(new maplibregl.NavigationControl());
 
 map.on('load', () => {
 
-  // -----------------------------
+  // --------------------------------------------------
   // 3D BUILDINGS
-  // -----------------------------
+  // --------------------------------------------------
 
   map.addLayer({
     id: '3d-buildings',
@@ -71,87 +64,79 @@ map.on('load', () => {
     intensity: 1
   });
 
-  initSolar();
+  // --------------------------------------------------
+  // SOLAR POINT DATA
+  // --------------------------------------------------
 
-});
+  const solarPoints = [];
 
-// --------------------------------------------------
-// SOLAR (Deck standalone, no MapboxOverlay)
-// --------------------------------------------------
-
-function initSolar() {
-
-  const points = [];
-  const step = 0.15;
+  const step = 0.25;
 
   for (let lon = 19; lon <= 28; lon += step) {
     for (let lat = 34; lat <= 42; lat += step) {
 
       const base = 1600;
-      const southBoost = (42 - lat) * 80;
+      const southBoost = (42 - lat) * 90;
       const value = base + southBoost;
 
-      points.push({
-        position: [lon, lat],
-        value: value
+      solarPoints.push({
+        type: "Feature",
+        properties: { solar: value },
+        geometry: {
+          type: "Point",
+          coordinates: [lon, lat]
+        }
       });
     }
   }
 
-  const deckgl = new deck.Deck({
-    canvas: 'deck-canvas',
-    width: '100%',
-    height: '100%',
-    controller: false,
-    initialViewState: {
-      longitude: 22.5,
-      latitude: 39.0,
-      zoom: 6.3,
-      pitch: 60,
-      bearing: -20
-    },
-    layers: [
-      new deck.ScatterplotLayer({
-        id: 'solar-layer',
-        data: points,
-        getPosition: d => d.position,
-        getRadius: 20000,
-        radiusUnits: 'meters',
-        opacity: 0.5,
-        getFillColor: d => {
-
-          const min = 1600;
-          const max = 2200;
-          const t = (d.value - min) / (max - min);
-
-          const r = Math.floor(30 + t * 225);
-          const g = Math.floor(144 + t * 100);
-          const b = Math.floor(255 - t * 200);
-
-          return [r, g, b, 200];
-        }
-      })
-    ]
+  map.addSource('solar', {
+    type: 'geojson',
+    data: {
+      type: "FeatureCollection",
+      features: solarPoints
+    }
   });
 
-  // Sync deck with map movement
-  map.on('move', () => {
+  // --------------------------------------------------
+  // HEATMAP LAYER (Native MapLibre)
+  // --------------------------------------------------
 
-    const center = map.getCenter();
+  map.addLayer({
+    id: 'solar-heatmap',
+    type: 'heatmap',
+    source: 'solar',
+    maxzoom: 9,
+    paint: {
 
-    deckgl.setProps({
-      viewState: {
-        longitude: center.lng,
-        latitude: center.lat,
-        zoom: map.getZoom(),
-        pitch: map.getPitch(),
-        bearing: map.getBearing()
-      }
-    });
+      'heatmap-weight': [
+        'interpolate',
+        ['linear'],
+        ['get', 'solar'],
+        1600, 0,
+        2200, 1
+      ],
 
+      'heatmap-intensity': 1,
+
+      'heatmap-color': [
+        'interpolate',
+        ['linear'],
+        ['heatmap-density'],
+        0, 'rgba(0,0,255,0)',
+        0.2, 'blue',
+        0.4, 'cyan',
+        0.6, 'yellow',
+        0.8, 'orange',
+        1, 'red'
+      ],
+
+      'heatmap-radius': 50,
+      'heatmap-opacity': 0.6
+    }
   });
 
-}
+});
 
 </script>
 
